# gpt-oracle-tuktuk

./: Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/gpt-oracle/: Cargo.toml
programs/gpt-oracle/src/: error.rs  lib.rs
programs/gpt-oracle/src/instructions/: callback.rs  initialize.rs  interact.rs  schedule.rs
tests/: gpt-oracle.ts  task_queue_real_patched.json  tuktuk.json
